some small changes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,9 +6,9 @@
                     <div class="item">
                         <h4>Social</h4>
                         <ul>
-                            <li><a href="">Facebook</a></li>
-                            <li><a href="">Linkedin</a></li>
-                            <li><a href="">Google +</a></li>
+                            <li><a href="#"><span class="facebook"><img src="../../../assets/images/socialicon/facebook.png" alt=""></span>Facebook</a></li>
+                            <li><a href="#"><span class="linkedin"><img src="../../../assets/images/socialicon/linkedin.png" alt=""></span>Linkedin</a></li>
+                            <li><a href="#"><span class="google"><img src="../../../assets/images/socialicon/google.png" alt=""></span>Google+</a></li>
                         </ul>
                     </div>
                 </div>
@@ -16,9 +16,9 @@
                     <div class="item">
                         <h4>Explore</h4>
                         <ul>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Team</a></li>
-                            <li><a href="">Clients</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Team</a></li>
+                            <li><a href="#">Clients</a></li>
                         </ul>
                     </div>
                 </div>
@@ -26,8 +26,8 @@
                     <div class="item">
                         <h4>Contact</h4>
                         <ul>
-                            <li><a href="">Lorem Ipsum dummy address used for display</a></li>
-                            <li><a href="">1234567890</a></li>
+                            <li><a href="#">Lorem Ipsum dummy address used for display</a></li>
+                            <li><a href="#">1234567890</a></li>
                         </ul>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                     <div class="item">
                         <h4>Email</h4>
                         <ul>
-                            <li><a href="">mendlesoncommunication@email.com</a></li>
+                            <li><a href="#">mendlesoncommunication@email.com</a></li>
                         </ul>
                     </div>
                 </div>
