--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,17 @@ a {
         }
     }
 }
+@media only screen and (max-width: 1200px) {
+    
+    #Clients{
+        .partnerlogosrow1, .partnerlogosrow2 {
+            .item{
+                width: 17% !important;
+                flex: 0 0 17% !important;
+            }
+        }
+    }
+}
 @media only screen and (max-width: 991px) {
     .navbar-collapse{
         background: #dcb8ff;
@@ -60,6 +71,32 @@ a {
     }
 }
 @media only screen and (max-width: 767px) {
+    #Contact {
+        .item{
+            li{
+                display: inline-block !important;
+                span{
+                    position: relative !important;
+                    left: auto !important;
+                    top: auto !important;
+                    img{
+                        width: 100%;
+                        height: auto;
+                        max-width: 20px;
+                    }
+                }
+            }
+        }
+    }
+    #Clients{
+        .partnerlogosrow1, .partnerlogosrow2{
+            .item{
+                width: 45% !important;
+                flex: 0 0 45% !important;
+                justify-content: center !important;
+            }
+        }
+    }
     #banner{
         min-height: 500px !important;
         margin-bottom:40px !important; 
@@ -211,6 +248,20 @@ a {
     }
 }
 @media only screen and (max-width: 575px) {
+    #Clients{
+        .partnerlogosrow1, .partnerlogosrow2{
+            .item{
+                width: 100% !important;
+                flex: inherit !important;
+                justify-content: center !important;
+                align-items: center !important;
+                text-align: center;
+                margin: 0 auto;
+                display: block !important;
+            }
+        }
+    }
+    
     #banner {
         min-height: 400px !important;
         margin-bottom: 20px !important;
