--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,6 +4,7 @@
         padding: 40px;
     }
     .item{
+        
         h4{
             font-family: 'Rubik';
             font-style: normal;
@@ -13,6 +14,16 @@
             color: #000000;
         }
         li{
+            position: relative;
+            span{
+                position: absolute;
+                left: -20px;
+                top: 0;
+                img{
+                    width: 100%;
+                    height: auto;
+                }
+            }
             a{
                 font-family: 'Rubik';
                 font-style: normal;
